--- a/src/Blog/blogadd.css
+++ b/src/Blog/blogadd.css
@@ -1,7 +1,10 @@
 .main_image_top {
-  background-image: url(..//assets/working-another-job.jpeg);
+  background-image:linear-gradient(0deg, rgba(0, 0, 0, 0.60) 0%, rgba(0, 0, 0, 0.60) 100%),  url(..//assets/blog.jpg);
   width: 100%;
   height: 400px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   
 }
 
