--- a/src/Contact/Contactadd.css
+++ b/src/Contact/Contactadd.css
@@ -1,5 +1,5 @@
 .main_image_Contact {
-    background-image: url(../assets/students-studying-together-stockcake.jpg);
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.60) 0%, rgba(0, 0, 0, 0.60) 100%), url(../assets/contact.jpg);
     width: 100%;
     height: 400px;
     background-position: center;
