--- a/src/Projectt/projectadd.css
+++ b/src/Projectt/projectadd.css
@@ -1,5 +1,5 @@
 .top_text_image {
-  background-image: url(../assets/working-another-job.jpeg);
+  background-image:linear-gradient(0deg, rgba(0, 0, 0, 0.60) 0%, rgba(0, 0, 0, 0.60) 100%), url(../assets/project.jpg);
   width: 100%;
   height: 400px;
   background-repeat: repeat;
