--- a/src/Servises/servisesadd.css
+++ b/src/Servises/servisesadd.css
@@ -1,9 +1,8 @@
 .Servises_main_image {
-  background-image: url(../assets/servises_main_img.jpg);
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.60) 0%, rgba(0, 0, 0, 0.60) 100%), url(../assets/service_main.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   width: 100%;
   height: 400px;
-  opacity: 0.8;
 }
