--- a/src/mainPage/mainPage.css
+++ b/src/mainPage/mainPage.css
@@ -8,12 +8,12 @@
   background-size: cover;
 }
 .secondImage_wrap {
-  background-image: url(./../assets/students-studying-together-stockcake.jpg);
-  width: 750px;
-  height: 550px;
+  background-image: url(../assets/main_Second.jpg);
+  width: 300px;
+  height: 230px;
   border-radius: 30px;
-  opacity: 0.8;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
+
