--- a/src/Projectt/project_detail/projectDetailAdd.css
+++ b/src/Projectt/project_detail/projectDetailAdd.css
@@ -1,5 +1,5 @@
 .wrapper_main_image {
-    background-image: url(../../assets//working-another-job.jpeg);
+    background-image:linear-gradient(0deg, rgba(0, 0, 0, 0.60) 0%, rgba(0, 0, 0, 0.60) 100%), url(../../assets/pexels-elevate-digital-784230-1647905.jpg);
     width: 100%;
     height: 400px;
     background-position: center;
